--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@nextui-org/react": "1.0.2-beta.3",
     "axios": "^1.3.2",
+    "canvas-confetti": "^1.6.0",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0",
     "@types/node": "17.0.12",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
